--- a/JQM_CodeMash/styles/main.css
+++ b/JQM_CodeMash/styles/main.css
@@ -1,20 +1,86 @@
-﻿body
+body
 {
-    margin-left: 4px;
-    margin-right: 4px;
+	margin-left: 4px;
+	margin-right: 4px;
 }
 
 .ui-footer
 {
-    text-align: center;    
+	text-align: center; 
 }
 
 .err
 {
-    color: red;
+	color: red;
 }
 
 #map_canvas
 {
-    text-align:center;
+	text-align: center;
+}
+
+#home
+{
+	background: rgba(44, 44, 44, 1);
+	background-image: url('../Images/debut_dark.png');
+	background-repeat: repeat;
+	
+}
+
+#sessionListContainer
+{
+	 
+}
+
+#sessionsList
+{
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+#sessionsList li
+{
+	margin: 6px;
+	padding-left: 9px;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	box-shadow: 0px 0px 1px 1px rgba(27, 27, 47, .4);
+	background-image: -webkit-linear-gradient(top, rgba(55, 55, 55, .6) 0, rgba(27, 27, 27, 1) 100%);
+	/*background-image: linear-gradient(to bottom, rgba(60, 60, 60, 0.6) 0, rgba(151, 151, 151, 0.3) 100%);*/
+	border-radius: .375em;
+}
+
+#sessionsList a
+{
+	text-decoration: none;
+	color: rgba(55, 55, 55, .6);
+}
+
+#sessionsList a:active
+{
+	text-decoration: none;
+	color: rgb(143, 182, 24);
+}
+
+#headerLeft
+{
+	width: 50%;
+	float: left;
+}
+#headerRight
+{
+	padding-right: 12px;
+	padding-top: 8px;
+	float: right;
+}
+
+.clearfix:after
+{
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
 }
