--- a/JQM_CodeMash/styles/main.css
+++ b/JQM_CodeMash/styles/main.css
@@ -75,20 +75,22 @@ body
 	float: right;
 }
 
-#sessionAdded {
-    display: none;
-    margin: 10px;
+#sessionAdded
+{
+	display: none;
+	margin: 10px;
 }
 
-
-#sessionAdded .ui-block-b {
-    padding-top: 16px;
-    color: #ff22cc;
+#sessionAdded .ui-block-b
+{
+	padding-top: 16px;
+	color: #ff22cc;
 }
 
-.ui-icon-calendar {
+.ui-icon-calendar
+{
 	background: url("../Images/83-calendar.png") 50% 50% no-repeat rgba(255, 255, 255, 1) !important;
-    background-size: 12px 12px;
+	background-size: 12px 12px;
 }
 
 .clearfix:after
@@ -106,29 +108,94 @@ body
 	background: #000;
 }
 
-.calendarPage_session {
-    background: #f2f2f2;
-    height: 40px;
+.calendarPage_session
+{
+	background: #f2f2f2;
+	height: 40px;
 }
 
-#calendarContainer {
-    margin-top: -13px;
+#calendarContainer
+{
+	margin-top: -13px;
 }
 
-.calendarDayHeading {
-    font-size: 1.1em;
-    color: #c2c2c2;
-    font-weight: bold;
-    text-shadow: 0 .5px 0 #c6c6c6;
-    width: 100%;
-    border-bottom: solid 1px silver;
+.calendarDayHeading
+{
+	font-size: 1.1em;
+	color: #c2c2c2;
+	font-weight: bold;
+	text-shadow: 0 .5px 0 #c6c6c6;
+	width: 100%;
+	border-bottom: solid 1px silver;
 }
 
-.calendarDay {
-   margin: 0px;
+.calendarDay
+{
+	margin: 0px;
 }
 
-.selected {
-    background: #000;
+.selected
+{
+	background: #000;
     
 }
+
+#optionsDropDown
+{
+	overflow: visible; 
+	list-style-type: none;
+}
+#optionsDropDown
+{ 
+	margin-top: 0em;
+}
+#optionsDropDown .ui-btn-corner-all
+{
+	border-radius: 0; 
+}
+#optionsDropDown ul
+{ 
+	position: absolute; 
+	display: none;
+	z-index: 500; 
+	margin-top: 0px; 
+}
+#optionsDropDown ul li
+{
+	width: 150px; 
+	display: block;
+}
+#optionsDropDown ul li a
+{
+	white-space: normal;
+}
+#optionsDropDown ul:hover ul
+{
+    
+} 
+
+ul, menu, dir
+{
+	display: block;
+	list-style-type: disc;
+	-webkit-margin-before: 0em;
+	-webkit-margin-after: 0em;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
+	-webkit-padding-start: 4px;
+    margin: .25em 0;
+}
+
+.titleLinkText {
+    float: left;
+    margin-left: 1%;
+    width: 68%;
+}
+
+.titleLinkDate {
+    float: left;
+    text-align: right;
+    width: 28%;
+    margin-right: 1%;
+}
+
